[package]
name = "yubigen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yubikey = "0.8.0"
fastcrypto = "0.1.9"
sui-types = {git = "https://github.com/MystenLabs/sui", branch="main" }
shared-crypto = {git = "https://github.com/MystenLabs/sui", branch="main" }
anyhow = "1.0.100"
bcs = "0.1.6"
p256 = "0.13.2"
clap = "4.4.54"
tracing = "0.1.44"
zeroize = "1.8.2"
serde_json = "1.0.149"
serde = "1.0.228"
mockall = "0.14.0"

[dev-dependencies]
mockall = "0.14.0"
serial_test = "3.3.1"
